# garden_path_sentences

./: .gitignore  README.md  pyproject.toml
cloud/: Dockerfile  README.md  modal_app.py  pick_candidates.py  run_all.sh
gemma3_12b/logs/: 01_baseline.json  02_layer_sweep.json  03_head_sweep_L0.json  03_head_sweep_L2.json  03_head_sweep_L26.json  04_predict.json  05_predict_layer_sweep.json  06_predict_head_sweep_L0.json  06_predict_head_sweep_L33.json  07_lexical_baseline.json  08_novel_lexical_baseline.json  09_novel_predict.json  10_attention_patterns.json  11_patching.json  12_mean_ablation.json  13_null_distribution.json  14_null_distribution_vc.json
gemma3_12b/scripts/: 01_baseline.py  02_layer_sweep.py  03_head_sweep.py  04_predict.py  05_predict_layer_sweep.py  06_predict_head_sweep.py  07_lexical_baseline.py  08_novel_lexical_baseline.py  09_novel_predict.py  10_attention_patterns.py  11_patching.py  12_mean_ablation.py  13_null_distribution.py  14_null_distribution_vc.py  _common.py
gemma3_1b/logs/: 01_baseline.json  02_layer_sweep.json  03_head_sweep_L10.json  03_head_sweep_L16.json  03_head_sweep_L2.json  04_predict.json  05_predict_layer_sweep.json  06_predict_head_sweep_L3.json  06_predict_head_sweep_L5.json  07_lexical_baseline.json  08_novel_lexical_baseline.json  09_novel_predict.json  10_attention_patterns.json  11_patching.json  12_mean_ablation.json  (+2 more)
inverse_gps/: README.md  detectors.py  sentences.py
model_finder/: __main__.py  arch.py  models.py  novel_pairs.py  sentences.py  surprisal.py  utils.py
report/: build_report.py
(+152 files in other folders)
