[project]
name = "garden-path-sentences"
version = "0.2.0"
description = "Mechanistic interpretability of garden path sentence processing in LLMs"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "transformers==5.9.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "accelerate>=0.30.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "python-dotenv>=1.0.0",
    "mlx-lm>=0.20.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
  packages = ["model_finder"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "poethepoet>=0.30.0",
    "ty>=0.0.40",
]

[tool.poe.tasks]
lint = "ruff check ."
"lint:fix" = "ruff check . --fix"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501", # line too long (the formatter handles wrapping)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
